[tool.poetry]
name = "freeboard"
version = "0.1.0"
description = ""
authors = ["Matt Findley <Findley.Matthew@EPA.gov>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1.8"
pint = "^0.24.4"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
